--- a/code.html
+++ b/code.html
@@ -7,7 +7,7 @@
   <body>
   <header>    
   <ul>
-        <li><a href="site.html" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="code.html">Html</a></li>
         <li><a href="style.html">Style</a></li>
         <li><a href="https://www.codeur.com/tuto/css/">Codeur</a></li>
