--- a/code.html
+++ b/code.html
@@ -26,7 +26,7 @@ Il existe cependant 2 types distincts de balises, les balises qui fonctionnent p
 <h2>Les balises en paire</h2>
 <p>Ces balises sont utilisées par paire car elles encadrent un contenu (texte, d’autres balises,…).<br>
 La deuxième balise a une spécificité, elle contiendra toujours un / après le chevron ouvrant. Cela permet d’indiquer la fin de l’encadrement. Dans notre cas, notre titre est ce qui est contenu entre les deux balises title, mais tout ce qui sera avant ou après ces balises ne sera pas un titre.<h2>La base</h2><p>Voyons à quoi ressemblerait notre fichier « index.html » et son texte, avec les structures de base d’une page web : <br>
- <br><img src="basehtml.png">
+ <br><img src="basehtml.PNG">
  <br>Par exemple, la balise html qui est ouverte avant la balise head se ferme avec  seulement après que la balise head ne soit écrite. Cet ordre est important à respecter, si vous fermez une balise avant que toutes les balises contenues dans cette première balise ne soient fermées votre site ne fonctionne pas.<br><br>
  <h2> En résumé </h2>
  <p>Avec ces premiers éléments vous allez pouvoir créer la base de votre page web qui sera interprétable par n’importe quel navigateur web (Chrome, Safari, , Firefox, Microsoft Edge, …).
