--- a/style.html
+++ b/style.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="stylestyle.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.80, maximum-scale=2.0, minimum-scale=0.80">
     <title>MoonDev</title>
   </head>
   <body>
